# pt-cruiser

./: .gitmodules  LICENSE  README.md
src/: .gitignore  CMakeLists.txt  Makefile  main.cu  test_scene.cu  test_scene.h
src/examples/: PTcruiser.sdl  PTcruiser4.sdl  cornell_box.sdl  cornell_box2.sdl  cornell_box3.sdl  cornell_box3fast.sdl  cornell_box3fast_wcampath.sdl  cornell_box3fast_wcampath2.sdl  cornell_box3fast_wcampath3.sdl  cornell_try.sdl  ptcruiser.sdl  ptcruiser2.sdl  test_scene4.txt
src/include/: arg_processing.cu  arg_processing.h  bound_box.cu  bound_box.h  bvh.cu  bvh.h  camera_path_types.h  camera_paths.cu  camera_paths.h  constants.h  light_sources.cu  light_sources.h  lighting.cu  lighting.h  materials.cu  materials.h  math_utils.h  mesh.cu  mesh.h  objects.cu  objects.h  pathtracing.cu  pathtracing.h  postprocess.cu  postprocess.h  scene_processing.cu  scene_processing.h
src/include/api_wrapper/: thrust_wrapper.cu  thrust_wrapper.h
src/parsing/: .gitignore  Makefile  lexer.l  lexer_test.c  lexsupport.c  lexsupport.h  mdm_lexer.l  parser.y  parser_api.c  parser_api.h  parser_test.c
src/parsing/examples/: combined.txt  degenerate-face.txt  eg1.txt  eg2.txt  eg3.txt  eg4.txt  eg5.txt  four-point-face-invalid.txt  negative-index.txt
src/web-ui/: app.py  process_input.py
src/web-ui/static/: script.js  style.css
src/web-ui/templates/: index.html
